# inverseOpt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  measurement.txt
config/: measurement.txt  multi_layer_config.txt  single_layer_config.txt  single_layer_config_forward.txt
docs/: ALGORITHM_INFO.md  CONFIG_USAGE.md  PARAMETER_REFERENCE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_REFERENCE.txt  README.md
script/: check_dependencies.sh  cmake_config.sh  compare_results.py  find_optimal_lambda.sh  test_with_true_initial.py  verify_measurement.py
src/: configReader.h  dataGen.cpp  heatTransferSolverBase.h  inverseAlgorithm.h  multiLayerInverse.cpp  multiLayerSolver.h  singleLayerInverse.cpp  singleLayerSolver.h
